iOS Cronet: Put cap on the buffer size passed to onReadCompleted delegate

The change also allows the client to start handling the received data sooner.

BUG=717551
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_cronet_tester

Review-Url: https://codereview.chromium.org/2857733002
Cr-Commit-Position: refs/heads/master@{#471319}

Former-commit-id: 922dd693b59ee99082ab9bab9daab3822d03047a